--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@discordjs/builders": "^0.11.0",
     "@discordjs/rest": "^0.2.0-canary.0",
     "discord-api-types": "^0.26.0",
-    "discord.js": "^13.5.0"
+    "discord.js": "^13.5.0",
+    "mathjs": "^10.0.2"
   },
   "devDependencies": {
     "eslint": "^8.5.0"
